[gd_scene load_steps=2 format=3 uid="uid://save_load_menu_001"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/save_load_menu.gd" id="1"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)
mouse_filter = 2

[node name="ModalRoot" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="ModalRoot"]
layout_mode = 2
custom_minimum_size = Vector2(900, 700)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="PanelMargins" type="MarginContainer" parent="ModalRoot/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 32

[node name="PanelVBox" type="VBoxContainer" parent="ModalRoot/Panel/PanelMargins"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox/Header"]
layout_mode = 2
text = "Save / Load Game"
theme_override_font_sizes/font_size = 38
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox/Header"]
layout_mode = 2
text = "Manage your game progress and save files"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HeaderSeparator" type="HSeparator" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
autowrap_mode = 2
horizontal_alignment = 1
text = "Select a save slot to load, overwrite, or delete your game progress."
theme_override_font_sizes/font_size = 16

[node name="AutosavePanel" type="Panel" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 140)

[node name="AutosaveMargins" type="MarginContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 18

[node name="AutosaveVBox" type="VBoxContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AutosaveInfo" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins/AutosaveVBox"]
layout_mode = 2
text = "Autosave: No autosave available"
theme_override_font_sizes/font_size = 18

[node name="AutosaveTimestamp" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins/AutosaveVBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 14

[node name="ButtonRow" type="HBoxContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins/AutosaveVBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="LoadAutosaveButton" type="Button" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins/AutosaveVBox/ButtonRow"]
layout_mode = 2
text = "Load Autosave"
custom_minimum_size = Vector2(180, 45)
theme_override_font_sizes/font_size = 16

[node name="DeleteAutosaveButton" type="Button" parent="ModalRoot/Panel/PanelMargins/PanelVBox/AutosavePanel/AutosaveMargins/AutosaveVBox/ButtonRow"]
layout_mode = 2
text = "Delete Autosave"
custom_minimum_size = Vector2(180, 45)
theme_override_font_sizes/font_size = 16

[node name="ScrollContainer" type="ScrollContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="SlotList" type="VBoxContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="EmptyHintLabel" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
autowrap_mode = 2
text = "No manual saves yet. Click the \"Save\" button on any slot to create one."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
visible = false

[node name="StatusLabel" type="Label" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="FooterSeparator" type="HSeparator" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2

[node name="FooterButtons" type="HBoxContainer" parent="ModalRoot/Panel/PanelMargins/PanelVBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 24

[node name="RefreshButton" type="Button" parent="ModalRoot/Panel/PanelMargins/PanelVBox/FooterButtons"]
layout_mode = 2
text = "Refresh"
custom_minimum_size = Vector2(180, 50)
theme_override_font_sizes/font_size = 18

[node name="CloseButton" type="Button" parent="ModalRoot/Panel/PanelMargins/PanelVBox/FooterButtons"]
layout_mode = 2
text = "Close"
custom_minimum_size = Vector2(180, 50)
theme_override_font_sizes/font_size = 18
